# quarto-marimo

./: .gitignore  README.md  index.qmd  pyproject.toml  stylua.toml
.github/workflows/: ci.yml  deploy.yml
_extensions/marimo/: _extension.yml  command.py  extract.py  marimo-execute.lua  utils.lua
scripts/: export.sh
tutorials/: dataflow.qmd  example-pdf.qmd  fileformat.qmd  for_jupyter_users.qmd  index.qmd  intro.qmd  layout.qmd  markdown.qmd  markdown_format.qmd  plots.qmd  sql.qmd  ui.qmd
